--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde-wasm-bindgen = "0.6"
 console_error_panic_hook = "0.1.7"
+web-sys = {version="*", features=["Window", "Storage"]}
 gloo-net = "0.6"
 rand = { version = "0.8.5" }
 getrandom = { version = "0.2", features = ["js"]}
