--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ console_error_panic_hook = "0.1.7"
 web-sys = {version="*", features=["Window", "Storage", "MediaQueryList"]}
 gloo-net = "0.6"
 rand = { version = "0.8.5" }
-getrandom = { version = "0.2", features = ["js"]}
+getrandom = { version = "0.3", features = ["wasm_js"] }
 polars = {version = "0.44", default_features=false, features=["csv"]}
 regex = "1"
 
